--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -927,6 +927,13 @@ h3,
     margin-top: 80px;
 }
 
+.logo-footer {
+    max-width: 100%;
+    width: 250px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
 #add-user-form .form-group {
     margin-bottom: 12px;
 }
